--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - authentication
+      - main
   workflow_dispatch:
 
 env:
@@ -11,7 +11,6 @@ permissions:
   contents: read
 
 jobs:
-
   create-folder:
     name: Create folder
     runs-on: ubuntu-latest
