--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,8 +24,8 @@ jobs:
         password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
         key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
         script: |
-          sudo mkdir -p /opt/applications/zeeven/app-zeeven
-          sudo chmod ugo+rwx /opt/applications/zeeven/app-zeeven
+          sudo mkdir -p /opt/applications/chillo-tech/website
+          sudo chmod ugo+rwx /opt/applications/chillo-tech/website
 
 
   copy-configs:
@@ -44,7 +44,7 @@ jobs:
           password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
           key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
           source: "docker-compose.yml"
-          target: "/opt/applications/zeeven/app-zeeven"
+          target: "/opt/applications/chillo-tech/website"
 
   dockerize:
     runs-on: ubuntu-latest
@@ -69,7 +69,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: simachille/app-zeeven:latest
+          tags: simachille/chillo.tech:latest
   
 
   run-container:
@@ -86,7 +86,7 @@ jobs:
         password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
         key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
         script: |
-          docker compose -f /opt/applications/zeeven/app-zeeven/docker-compose.yml stop
-          docker compose -f /opt/applications/zeeven/app-zeeven/docker-compose.yml rm -f
-          docker rmi simachille/app-zeeven:latest
-          sudo docker compose -f /opt/applications/zeeven/app-zeeven/docker-compose.yml up -d
+          docker compose -f /opt/applications/chillo-tech/website/docker-compose.yml stop
+          docker compose -f /opt/applications/chillo-tech/website/docker-compose.yml rm -f
+          docker rmi simachille/chillo.tech:latest
+          sudo docker compose -f /opt/applications/chillo-tech/website/docker-compose.yml up -d
