--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
         host: ${{ secrets.RECETTE_APPLICATIONS_HOST }}
         port: ${{ secrets.RECETTE_APPLICATIONS_PORT }}
         username: ${{ secrets.RECETTE_APPLICATIONS_USERNAME }}
-        password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
+        #password: ${{ secrets.RECETTE_APPLICATIONS_PASSWPRD }}
         key: ${{ secrets.RECETTE_APPLICATIONS_SSH_PRIVATE_KEY }}
         script: |
           sudo mkdir -p /opt/applications/chillo-tech/website
