--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.9.6",
     "dotenv": "^16.0.1",
-    "next": "12.0.8-canary.7",
+    "next": "latest",
     "nodemailer": "^6.7.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
