--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-
 MAIL_USERNAME=bonjour.zeeven@gmail.com
 MAIL_PASSWORD=xpmswzbclbnulucd
 MAIL_FROM=bonjour@chillo.tech
 MAIL_TO=achille.mbougueng@chillo.tech
+BACKOFFICE_URL=https://backoffice.chillo.fr
