Activation de la securité

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ MAIL_USERNAME=bonjour.zeeven@gmail.com
 MAIL_PASSWORD=xpmswzbclbnulucd
 MAIL_FROM=bonjour@chillo.tech
 MAIL_TO=achille.mbougueng@chillo.tech
-BACKOFFICE_URL=https://backoffice.chillo.fr
+BACKOFFICE_URL=http://strapi-applications-management
