--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ MAIL_USERNAME=bonjour.zeeven@gmail.com
 MAIL_PASSWORD=xpmswzbclbnulucd
 MAIL_FROM=bonjour@chillo.tech
 MAIL_TO=achille.mbougueng@chillo.tech
+BACKOFFICE_URL=https://chillo.tech
 BACKOFFICE_API=https://backoffice.chillo.fr
 BACKOFFICE_API_TOKEN=Gm_nmJWb5Hhtc9QrxcBNSs5mCmBUkmtt
 DNS=https://chillo.tech
