--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^1.0.5",
     "@hookform/resolvers": "^2.9.6",
     "axios": "^1.4.0",
@@ -18,7 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.33.1",
-    "react-icons": "^4.3.1",
+    "react-icons": "^4.11.0",
     "react-markdown": "^8.0.3",
     "react-query": "^3.39.3",
     "sharp": "^0.30.7",
